Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-22994

meego platforminputcontext plugin has wrong name

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • None
    • 5.0.0
    • None
    • b27bf9bb94ff40b7e4f69d7f0cb606e12baa2fe2

    Description

      The "meego" platforminputcontext plugin implements support for Maliit*
      There is nothing MeeGo or Maemo specific about this plugin or Maliit, so the plugin should be called "maliit".
      It should also be built by default on systems with DBus, so that it can be used also on non-MeeGo systems.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            Unassigned Unassigned
            jonnor Jon Nordby
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes