src/plugins/platforminputcontexts/platforminputcontexts.pro
@@ -1,5 +1,4 @@
 TEMPLATE = subdirs
 contains(QT_CONFIG, dbus) {
-!macx:!win32:SUBDIRS += ibus
+!macx:!win32:SUBDIRS += ibus maliit
 }
-linux-g++-maemo: SUBDIRS += meego
